fix: x overflow

--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@ body {
   background-color: rgba(0, 0, 0, 0.914);
   color: rgb(255, 255, 255);
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Courier New', Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,6 +19,9 @@ code {
     flex-direction: column;
     justify-content: center;
     min-height: 150vh;
+    width:100%;
+    align-items: center;
+    overflow-x: hidden;
   }
 
   .welcome {
@@ -59,31 +63,16 @@ code {
     margin-inline: 20px;
   }
 
-  .projects {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .work-exp {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  .work-cards {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 100px;
-  }
 }
 @media (max-width: 800px) {
   .home-component {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     min-height: 150vh;
+    overflow-x: hidden;
+
   }
 
   .welcome {
@@ -130,30 +119,5 @@ code {
     margin-inline: 20px;
   }
 
-  .projects {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .work-exp {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  .work-cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    transform: scale(75%);
-  }
-  .card1 {
-    margin-bottom: 50px;
-  }
-  .card2 {
-    margin-bottom: 50px;
-  }
 }
 @import "tailwindcss";
